number alignment fix

--- a/sass/main.css
+++ b/sass/main.css
@@ -1059,9 +1059,11 @@ a {
   position: absolute;
   color: #fff;
   background-color: #9356DC;
-  width: 25px;
-  height: 25px;
-  border-radius: 100px;
+  width: 24px;
+  height: 24px;
+  padding: 3px;
+  border-radius: 15px;
+  display: block;
 }
 
 .functionality-tag {
